--- a/Web/HTML CSS/test.html
+++ b/Web/HTML CSS/test.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>测试</title>
+    <style>
+        h4{
+            color:cornflowerblue;
+        }
+    </style>
 </head>
 <body>
-    <h1>测试</h1>
+    <h4>你喜欢的食物</h4>
 </body>
 </html>
