--- a/Web/HTML CSS/test.html
+++ b/Web/HTML CSS/test.html
@@ -5,12 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>测试</title>
     <style>
-        h4{
-            color:cornflowerblue;
+        .red {
+            width: 100px;
+            height: 100px;
+            background-color: crimson;
+        }
+        .green {
+            width: 100px;
+            height: 100px;
+            background-color: darkcyan;
+        }
+        .fond {
+            color: darkgrey;
         }
     </style>
 </head>
 <body>
-    <h4>你喜欢的食物</h4>
+    <div class="red"></div>
+    <div class="green"></div>
+    <div class="red"></div>
+    <div class="red fond">盒子</div>
 </body>
 </html>
