--- a/Web/HTML CSS/test.html
+++ b/Web/HTML CSS/test.html
@@ -4,21 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>测试</title>
-    <style>
-        .red {
-            width: 100px;
-            height: 100px;
-            background-color: crimson;
-        }
-        .green {
-            width: 100px;
-            height: 100px;
-            background-color: darkcyan;
-        }
-        .fond {
-            color: darkgrey;
-        }
-    </style>
+    <link rel="stylesheet" href="text.css">
 </head>
 <body>
     <div class="red"></div>
