--- a/Web/HTML CSS/导航栏.html
+++ b/Web/HTML CSS/导航栏.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>导航栏</title>
     <style>
         .nav {
             height: 41px;
