--- a/Web/Vue/Vue.html
+++ b/Web/Vue/Vue.html
@@ -6,41 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vue基础</title>
     <style>
-
     </style>
 </head>
 <body>
-    <div id="app">
-      <button @click="sub">
-        -
-      </button>
-      <span>{{ num }}</span>
-      <button @click="add">
-        +
-      </button>
-    </div>
+  <div id="app">
+    <img :src="imgArr[index]" alt="">
+    <a href="#" @click="prev" v-show="index!=0"></a>
+    <a href="#" @click="next" v-show="index<imgArr.length-1"></a>
+  </div>
     <!-- 开发环境版本，包含了有帮助的命令行警告 -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script>
     var app = new Vue({
         el: '#app',
-        data:{
-          num:1
+        data: {
+          imgArr:[],
+          index: 0
         },
         methods:{
-          add:function(){
-            if(this.num<10){
-              this.num += 1
-            }else{
-              alert('别点了')
-            }            
+          prev:function(){
+            this.index++;
           },
-          sub:function(){
-            if(this.num>0){
-              this.num -= 1
-            }else{
-              alert('别点了')
-            } 
+          next:function(){
+            this.index--;
           }
         }
       })   
